--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "node-telegram-bot-api": "^0.57.0",
-    "objects-to-csv": "^1.3.6"
+    "objects-to-csv": "^1.3.6",
+    "pool": "^0.4.1"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/farisnsm/jogabot.git"
