--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "csv": "^6.1.0",
     "csv-writer": "^1.6.0",
     "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "mssql": "^8.1.2",
     "mysql": "^2.18.1",
